Fix padding on extrude/retract buttons on mobile

--- a/octoprint_v8theme/static/css/main.css
+++ b/octoprint_v8theme/static/css/main.css
@@ -1291,6 +1291,9 @@ span.fileinput-button {
     margin-left: auto;
     margin-right: auto;
   }
+  .control-panel-right .jog-panel:first-child .btn-block:nth-child(3), .control-panel-right .jog-panel:first-child .btn-block:nth-child(4) { {
+    padding: 6px;
+  }
 }
 /*===================================================
    B. 768px and larger
